ISP20220422 - Fabric Crocking &Shrinkage，Heat Test跟Wash Test 小數點輸入調整

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -357,10 +357,10 @@
                                             </div>
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalOriginal, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalOriginal, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalOriginal, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalOriginal, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @{
@@ -382,13 +382,13 @@
                                             </select>
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest1, new { @class= "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest1, new { @class= "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest2, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest2, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest3, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest3, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalAverage, new { @type = "number", @step = "0.01", @readonly="readonly" })
@@ -397,13 +397,13 @@
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalRate, new { @type = "number", @step = "0.01", @readonly = "readonly" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest1, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest1, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest2, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest2, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest3, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest3, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @onchange = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalAverage, new { @type = "number", @step = "0.01", @readonly = "readonly" })
@@ -911,6 +911,6 @@
             return 0;
         }
 
-        return value;
+        return Number.parseFloat(value).toFixed(2);
     }
 </script>
