--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -862,7 +862,7 @@
             }
             // (HorizontalAverage - HorizontalOriginal) / HorizontalOriginal * 100
             var rate = Round(accMul(accDiv(accSubtr(avg, original), original), 100));
-            $('#Heat_Detail_' + idx + '__HorizontalRate').val(rate);
+            $('#Heat_Detail_' + idx + '__HorizontalRate').val(rate > 100 ? 100 : rate);
         });
 
         $('.VerticalTest').unbind('blur').on('blur', function () {
@@ -884,7 +884,7 @@
 
             // (VerticalAverage - VerticalOriginal) / VerticalOriginal * 100
             var rate = Round(accMul(accDiv(accSubtr(avg, original), original), 100));
-            $('#Heat_Detail_' + idx + '__VerticalRate').val(rate);
+            $('#Heat_Detail_' + idx + '__VerticalRate').val(rate > 100 ? 100 : rate);
         });
     }
 
