ISP20220431 - 修正Others 圖片沒有存入的問題

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others_TakePicture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others_TakePicture.cshtml
@@ -128,7 +128,7 @@
                     Remark: Rmk,
                 }
 
-                window.opener.GetImage(Picture);
+                window.opener.GetImage(Picture, ImgSource);
                 window.close();
             }
 
