--- a/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
@@ -12,7 +12,7 @@
 <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
 <link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
-
+<link href="~/ThirdParty/plugins/jquery-ui/jquery-ui.css" rel="stylesheet" />
 
 <style type="text/css">
     .dataTables_wrapper {
@@ -100,6 +100,10 @@
                             &nbsp;&nbsp;
                             <label class="QueryLab">Season</label>
                             <input type="text" name="SeasonID" id="txtSeason" />
+                             &nbsp;&nbsp;
+                            <label class="QueryLab">InspectionDate</label>
+                            <input type="text" name="InspectionDateStart" id="txtInspectionDateStart" class="date-picker"/>~
+                            <input type="text" name="InspectionDateEnd" id="txtInspectionDateEnd" class="date-picker"/>
                             &nbsp;&nbsp;
                             <input type="submit" name="name" id="btnQuery" value="Query" />
                             &nbsp;&nbsp;
