ISP20220456 - [BA Criteria] Inspection Date加入必填條件

--- a/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
@@ -192,8 +192,8 @@
     });
 
     function checkForm(obj) {
-        if ($("#txtOrderID").val() == "" & $("#txtStyle").val() == "") {
-            msg.WithError("Style# and SP# cannot all be empty");
+        if ($("#txtOrderID").val() == "" & $("#txtStyle").val() == "" & $("#txtInspectionDateStart").val() == "" & $("#txtInspectionDateEnd").val() == "") {
+            msg.WithError("SP#、Style or Inspection Date Cannot be Empty");
             return false;
         }
     }
