ISP20220430 - 新增SampleRFT Inspection功能

--- a/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_DF.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_DF.cshtml
@@ -58,7 +58,7 @@
             if (src.length > 6) {
                 img.src = src;
                 imgSet.src = src;
-                OtherSetting(ImgID, 'a' + ImgID);
+                //OtherSetting(ImgID, 'a' + ImgID);
             }
         };
 
