--- a/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_BA.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_BA.cshtml
@@ -12,6 +12,7 @@
         font-weight: bold;
         padding: 1em;
     }
+
     .display-None {
         display: none;
     }
@@ -59,6 +60,7 @@
                 img.src = src;
                 imgSet.src = src;
                 OtherSetting(ImgID, 'a' + ImgID);
+                AddToTemp(ImgID);
             }
         };
 
@@ -137,6 +139,47 @@
         const imgSet = document.querySelector("#" + ImgID);
         const aSet = document.querySelector("#" + aID);
 
-        aSet.href = imgSet.src;
+        //aSet.href = imgSet.src;
+    }
+
+    function AddToTemp(ImgID) {
+
+        const imgSet = document.querySelector("#" + ImgID);
+
+        var Img = imgSet.src.replace("data:image/png;base64,", "");
+
+        var data =
+        {
+            OrderID: orderID,
+            TempImage: Img,
+        };
+
+        $.ajax({
+            url: "@Url.Action("AddDefectPicTemp", "InspectionBySP", new { Area = "SampleRFT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ data: data, BAUKey: '@Model.Ukey', ID: '@Model.ID', BACriteria: '@Model.BACriteria' }),
+            async: true,
+            success: function (data) {
+
+                // 後端加入成功之後，前端下拉選單、對應圖片也要更新
+
+                var dropDownList = JSON.parse(data[0]);
+                var ImageList = JSON.parse(data[1]);
+
+                $('#ImageList').empty();
+                $.each(dropDownList, function (idx) {
+                    $('#ImageList').append('<option value="' + dropDownList[idx].Value + '">' + dropDownList[idx].Text + '</option>');
+                });
+
+                $('#ImageArea').empty();
+                $.each(ImageList, function (idx) {
+                    $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" class="DefectImages" type="" style="width:100%;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
+                });
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+            }
+        });
     }
 </script>
