--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
@@ -107,18 +107,18 @@
                 ['CheckFiberContent', 'Fiber Content', @Model.CheckFiberContent],
                 ['CheckCareInstructions', 'Care Instructions', @Model.CheckCareInstructions],
                 ['CheckDecorativeLabel', 'Decorative Label', @Model.CheckDecorativeLabel],
-                ['CheckAdicomLabel', 'Adicom Label', @Model.CheckAdicomLabel],
-                ['CheckCountryofOrigion', 'Country of Origion', @Model.CheckCountryofOrigion],
+                ['CheckCareLabel', 'Care Label', @Model.CheckCareLabel],
+                ['CheckCountryofOrigin', 'Country of Origin', @Model.CheckCountryofOrigin],
                 ['CheckSizeKey', 'Size Key', @Model.CheckSizeKey],
-                ['Check8FlagLabel', '8-Flag Label', @Model.Check8FlagLabel],
+                ['CheckSecurityLabel', 'Security Label ATACA', @Model.CheckSecurityLabel],
                 ['CheckAdditionalLabel', 'Additional Label', @Model.CheckAdditionalLabel],
             ]
         ]);
         adata.push([null, 'Packaging', false,
             [
-                ['CheckShippingMark', 'Shipping Mark', @Model.CheckShippingMark],
+                ['CheckOuterCarton', 'Outer Carton Labels', @Model.CheckOuterCarton],
                 ['CheckPolytagMarketing', 'Polybag/Marketing', @Model.CheckPolytagMarketing],
-                ['CheckColorSizeQty', 'Color/Size/Qty', @Model.CheckColorSizeQty],
+                ['CheckPackingMode', 'Packing Mode', @Model.CheckPackingMode],
                 ['CheckHangtag', 'Hangtag', @Model.CheckHangtag],
             ]
         ]);
