ISP20220517 - [Style Result] 條碼上方顯示StyleID

--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
@@ -245,7 +245,10 @@
                             </td>
                             <td style=" border: 1px solid gray;vertical-align: middle;width: 25vw;">
                                 @*<span class="detail_Head" id="BarcodeText">@Model.StyleUkey</span>*@
-                                <svg id="Barcode"></svg>
+                                <span class="detail_Head" id="StyleID">@Model.StyleID</span>
+                                <div>
+                                    <svg id="Barcode"></svg>
+                                </div>
                             </td>
                         </tr>
                         <tr>
